--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@observablehq/plot": "^0.6.17",
     "d3": "^7.9.0",
     "papaparse": "^5.5.2",
     "vue": "^3.5.13",
