--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "type-check": "vue-tsc --build",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@observablehq/plot": "^0.6.17",
     "d3": "^7.9.0",
+    "gh-pages": "^6.3.0",
     "papaparse": "^5.5.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
